# libspace

./: Makefile  Makefile.am  Makefile.in  README  README.in  TAGS  _configs.sed  aclocal.m4  buildcmd-g++.txt  buildcmd.txt  configure  configure.ac  discretization.h  empty  function.h  instances.cc  libspace.pc.in  misc.cc  step-6  svn-commit.2.tmp  svn-commit.tmp  test-dealii.cc  test-libmesh.cc  test-storage.cc  test.cc
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
buildcmd/: lxir-debug.txt  lxir.txt  ven.txt
data/: unit-cube.geo  unit-cube.msh
doc/: space.tex
doc/.svn/: entries
doc/.svn/text-base/: fem.tex.svn-base
fem/: femmesh.cc  fespace.h  fespace_pointwise.cc
fem/.svn/: entries
fem/.svn/text-base/: fespace_pointwise.cc.svn-base
fem/deal.II/: feoperator.h  mesh.cc  mesh.h  scrap.cc
fem/deal.II/.svn/: entries
fem/deal.II/.svn/text-base/: mesh.cc.svn-base
fem/dolfin/.svn/: entries
fem/libmesh/: mesh.h
fem/libmesh/.svn/: entries
grid/: regulargrid.cc  regulargrid.h
include/.svn/: entries
include/space/: config.h  config.h.in  discretization.h  function.h  libspace-config.h  stamp-h1  volumes.h  volumes.h~
include/space/.svn/: entries
include/space/fem/: fespace.h
include/space/fem/.svn/: entries
include/space/fem/.svn/text-base/: fespace.h.svn-base
include/space/fem/deal.II/: feoperator.h  feoperator.trilinos.h  feoperator.trilinos.h~  feoperator.trilinoswrapper.h  mesh.h  mesh.h~  mesh.trilinos.h
include/space/fem/deal.II/.svn/: entries
include/space/fem/dolfin/.svn/: entries
include/space/fem/libmesh/: #feoperator.h#  .#feoperator.h  feoperator.h  mesh.h
include/space/fem/libmesh/.svn/: entries
include/space/fem/libmesh/.svn/text-base/: autoheader-undef.h.svn-base  feoperator.h.svn-base  mesh.h.svn-base
include/space/grid/: regulargrid.h
include/space/grid/.svn/: entries
include/space/storage/: compact.h  compact.h~  epetra.h  epetra.h~  interval.h  interval.h~  pfi.h~  pfinterval.h  pfinterval.h~  simple.h  smallmatrix.h  smallvector.h  storage.h
include/space/storage/.svn/: entries
include/space/storage/.svn/text-base/: storage.h.svn-base
m4/.svn/: entries
src/: Makefile.am  Makefile.in  Makefile~  instances-fespace-dii.cc  instances-fespace.cc  instances-grid.cc  instances-interval.cc  instances.cc  libspace-base.la  misc.cc  volumes.cc
src/.svn/: entries
src/fem/: femmesh.cc  fespace_pointwise.cc
src/fem/.svn/: entries
src/fem/deal.II/: #mesh.cc#  0a0  0a0~  geometry_funs.cc  geometry_shit.cc~  mam.cc  mam.cc~  mesh-init.cc  mesh-output.cc  mesh.cc  mesh.cc.backup  mesh.trilinos.cc  scrap
src/fem/deal.II/.svn/: entries
src/fem/dolfin/.svn/: entries
src/fem/libmesh/.svn/: entries
src/grid/: regulargrid.cc
src/grid/.svn/: entries
src/grid/.svn/text-base/: regulargrid.cc.svn-base
src/instances/: 1D-fespace-dii.cc  1D-fespace.cc  1D-grid.cc  2D-fespace-dii.cc  2D-fespace.cc  2D-grid.cc  3D-fespace-dii.cc  3D-fespace.cc  3D-grid.cc
src/storage/: interval.cc  interval.cc~  pfinterval.cc  pfinterval.cc~
src/storage/.svn/: entries
src/storage/.svn/text-base/: doffunction.h.svn-base  scratch.h.svn-base
storage/: mam.cc  smallvector.h  storage.h
storage/.svn/: entries
storage/.svn/text-base/: doffun.h.svn-base  simple.h.backup.svn-base
test/: Makefile.am  Makefile.am~  Makefile.in  poisson0.gpl  poisson0.msh  poisson1.gpl  poisson1.msh  poisson2.gpl  poisson2.msh  poisson3.gpl  poisson3.msh  poisson4.msh  set.msh  step-6.cc  test-dealii.cc  test-fails.geo  test-fails.msh  test-libmesh.cc  test-msh.cc  test-msh.cc~  test-pfinterval.cc  test-storage.cc  test-trilinos.cc  test-trilinos.cc~  test.eps  test.geo  test.geo~  test2.msh
test/.deps/: test-test.Po
